# NotesApp

./: .gitignore  college.db  database.db  database.py  dump.txt  main.py  model.py  notes_tags.db  requirements.txt  setup.cfg  ss.txt
NoteApp/: __init__.py  database.py  gui.py  guiApp.py  main.py  model.py
documentation/: release-note.md  worklog_wimmer.md
documentation/userstories/: NA_UserStory2 - Edit Notes.md  NA_UserStory4 - Tagging.md
tests/: test_database.py
userstories/: NA_UserStory1 - Create New Note.md  NA_UserStory3 - Searching Notes.md
