[metadata]
name = NoteApp
author = Jan Wimmer
author_email = wimmer190074qsr.htlweiz.at
description = Basic Notes App
version = 1.0.0
url = https://github.com

[options]
python_requires >= 3.8
packages = find:
zip_safe = False
install_requires =
	sqlalchemy
        pytest

[flake8]
max-line-length=99
exclude = venv
docstring-convention = numpy

[tool:pytest]
testpaths = tests
log_level = info